Added all possible field set to 'document' tab

--- a/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/pattern-poll.scss
+++ b/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/pattern-poll.scss
@@ -83,7 +83,7 @@
                     }
 
                     .body-text-area {
-                        padding: $padding-v-small $padding-h-small;
+                        padding: $padding-v-small 5px;
                     }
 
                     .v-filterselect {
