--- a/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/layout/strings.scss
+++ b/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/layout/strings.scss
@@ -20,6 +20,7 @@
             }
 
             .v-horizontallayout {
+                padding-right: 14px;
 
                 .v-slot {
                     margin-left: 0;
