--- a/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/pattern-poll.scss
+++ b/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/pattern-poll.scss
@@ -29,6 +29,7 @@
                 font-size: 12px;
                 padding-top: 10px;
                 padding-bottom: 10px;
+                padding-left: 12px;
                 color: $color-label-gray;
             }
 
