--- a/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/pattern-poll.scss
+++ b/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/pattern-poll.scss
@@ -97,7 +97,12 @@
                         margin-right: 25px;
                     }
 
+                    .v-label.v-disabled {
+                        color: $color-label-gray;
+                    }
+
                     .v-checkbox {
+                        vertical-align: baseline;
 
                         label {
                             padding-left: $padding-h-small;
