Added document and template removing

--- a/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/pattern-poll.scss
+++ b/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/pattern-poll.scss
@@ -108,6 +108,10 @@
                             padding-left: $padding-h-small;
                         }
                     }
+
+                    .v-button {
+                        margin-right: 5px;
+                    }
                 }
             }
         }
