--- a/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/window.scss
+++ b/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/window.scss
@@ -2,21 +2,15 @@
 
 @import "window/activation-code.scss";
 @import "window/confirm.scss";
-@import "window/folder.scss";
 @import "window/login.scss";
-@import "window/logout.scss";
-@import "window/pattern.scss";
-@import "window/request.scss";
-@import "window/settings.scss";
-@import "window/video.scss";
 @import "window/warning.scss";
 
 @mixin window {
 
     .v-window {
-        -webkit-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.5);
-        -moz-box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.5);
-        box-shadow: 10px 10px 60px 0px rgba(0, 0, 0, 0.5);
+        -webkit-box-shadow: 10px 10px 60px 0 rgba(0, 0, 0, 0.5);
+        -moz-box-shadow: 10px 10px 60px 0 rgba(0, 0, 0, 0.5);
+        box-shadow: 10px 10px 60px 0 rgba(0, 0, 0, 0.5);
     }
 
     .v-window-header {
@@ -31,12 +25,6 @@
 
     @include window-activation-code;
     @include window-confirm;
-    @include window-folder;
     @include window-login;
-    @include window-logout;
-    @include window-pattern;
-    @include window-request;
-    @include window-settings;
-    @include window-video;
     @include window-warning;
 }
