--- a/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/editor.scss
+++ b/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/editor.scss
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 
-@mixin container-pattern-poll {
+@mixin container-editor {
 
-    .container-pattern-poll {
+    .container-editor {
 
         .v-slot-separator {
             height: 10px;
