Added up/down arrow icons

--- a/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/editor.scss
+++ b/sberbank-web/src/main/webapp/VAADIN/themes/legenda/styles/container/editor.scss
@@ -112,6 +112,10 @@
                     .v-button {
                         margin-right: 5px;
                     }
+
+                    .v-button.v-disabled {
+                        opacity: 0.25;
+                    }
                 }
             }
         }
